--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.17",
     "@tanstack/react-query-devtools": "^5.91.2",
+    "formik": "^2.4.9",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
     "next": "16.0.7",
@@ -19,6 +20,7 @@
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
     "recharts": "^3.6.0",
+    "yup": "^1.7.1",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
