--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "plop": "^4.0.5",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
