--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
     "recharts": "^3.6.0",
+    "sonner": "^2.0.7",
     "uuid": "^13.0.0",
     "yup": "^1.7.1",
     "zustand": "^5.0.10"
