--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "baseline-browser-mapping": "^2.10.0",
     "plop": "^4.0.5",
     "tailwindcss": "^4",
     "typescript": "^5"
